--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
-    <title>The Wedding of Aldi & Andi Indri</title>
+    <title>The Wedding of Andi Indri & Aldi</title>
 
     <meta name="author" content="aldhykohar">
-    <meta name="title" content="The Wedding of Aldi & Andi Indri">
-    <meta name="description" content="The Wedding of Aldi & Andi Indri">
-    <meta property="og:title" content="The Wedding of Aldi & Andi Indri">
-    <meta property="og:description" content="The Wedding of Aldi & Andi Indri">
-    <meta property="og:image" content="https://aldhykohar.github.io/aldi-invitation/assets/images/metadata.jpeg">
+    <meta name="title" content="The Wedding of Andi Indri & Aldi">
+    <meta name="description" content="The Wedding of Andi Indri & Aldi">
+    <meta property="og:title" content="The Wedding of Andi Indri & Aldi">
+    <meta property="og:description" content="The Wedding of Andi Indri & Aldi">
+    <meta property="og:image" content="https://aldhykohar.github.io/indri-invitation/assets/images/metadata.jpeg">
     <meta property="og:image:secure_url"
-        content="https://aldhykohar.github.io/aldi-invitation/assets/images/metadata.jpeg">
+        content="https://aldhykohar.github.io/indri-invitation/assets/images/metadata.jpeg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="id_ID">
-    <meta property="og:site_name" content="The Wedding of Aldi & Andi Indri">
+    <meta property="og:site_name" content="The Wedding of Andi Indri & Aldi">
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome Icons -->
@@ -50,7 +50,7 @@
                         <img src="./assets/images/couple.jpeg" alt="background" onclick="openModalImg(this)">
                     </div>
 
-                    <h1 class="font-esthetic my-4" style="font-size: 3rem;">Aldi &amp; Andi Indri</h1>
+                    <h1 class="font-esthetic my-4" style="font-size: 3rem;">Andi Indri &amp; Aldi</h1>
                     <div class="m-2">
                         <p class="mt-0 mb-1 mx-0 p-0">Kepada Yth Bapak/Ibu/Saudara/i</p>
                         <h2 id="to-visitor"></h2>
@@ -131,7 +131,7 @@
                 </div>
 
                 <h1 class="font-esthetic my-4 animated-horizontal-item" data-direction="left" style="font-size: 3rem;">
-                    Aldi &amp; Andi Indri</h1>
+                    Andi Indri &amp; Aldi</h1>
                 <!-- <h1 class="font-esthetic my-4" style="font-size: 2rem;">Aldi Arif Setiawan</h1>
                 <h1 class="font-esthetic" style="font-size: 2rem;">&amp;</h1>
                 <h1 class="font-esthetic my-4" style="font-size: 2rem;">Andi Indri</h1> -->
@@ -139,7 +139,7 @@
                     Agustus 2024</p>
 
                 <div class="animated-vertical-item" data-direction="bottom">
-                    <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=The%20Wedding%20of%20Aldi%20and%20Andi%20Indri&details=The%20Wedding%20of%20Aldi%20and%20Andi%20Indri%7C%2004%20Agustus%202024%20%7C%20RT%2002%20RW%2001,%20Desa%20Abbanuange,%20Kec.%20Lilirilau,%20Kab.%20Soppeng,%20Sulawesi%20Selatan%20%7C%2010.00%20WITA%20-%20Selesai%20&dates=20240804T100000/20240804T110000&location=https://maps.app.goo.gl/zRkN7r21QAbLtXx88"
+                    <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=The%20Wedding%20of%20Aldi%20and%20Andi%20Indri&details=The%20Wedding%20of%20Aldi%20and%20Andi%20Indri%7C%2004%20Agustus%202024%20%7C%20RT%2002%20RW%2001,%20Desa%20Kebo,%20Kec.%20Lilirilau,%20Kab.%20Soppeng,%20Sulawesi%20Selatan%20%7C%2010.00%20WITA%20-%20Selesai%20&dates=20240804T100000/20240804T110000&location=https://maps.app.goo.gl/9im5Bv163ZThWFVM8"
                         target="_blank" class="btn custom-button btn-sm rounded-pill shadow-sm px-3">
                         <i class="fa-solid fa-calendar-check me-2"></i> Save The Date
                     </a>
@@ -202,13 +202,14 @@
 
                 <div class="overflow-x-hidden">
 
+
                     <div class="animated-horizontal-item" data-direction="right">
                         <div class="img-crop border border-3 border-light shadow my-4 mx-auto">
-                            <img src="./assets/images/boy.jpeg" alt="boy" onclick="openModalImg(this)">
+                            <img src="./assets/images/girl.jpeg" alt="girl" onclick="openModalImg(this)">
                         </div>
-                        <h1 class="font-esthetic" style="font-size: 2rem;">Aldi Arif Setiawan, S.Kom</h1>
-                        <p class="mt-3 mb-0" style="font-size: 1.25rem;">Putra Pertama</p>
-                        <p class="mb-0">Bapak Sajidin &amp; Ibu Hayati</p>
+                        <h1 class="font-esthetic" style="font-size: 2rem;">Andi Indri, A. Md. Keb</h1>
+                        <p class="mt-3 mb-0" style="font-size: 1.25rem;">Putri Pertama</p>
+                        <p class="mb-0">Bapak Andi Idrus Rasyid &amp; Ibu Andi Erdawati</p>
                     </div>
 
                     <!-- Love animation -->
@@ -237,12 +238,13 @@
 
                     <div class="animated-horizontal-item" data-direction="left">
                         <div class="img-crop border border-3 border-light shadow my-4 mx-auto">
-                            <img src="./assets/images/girl.jpeg" alt="girl" onclick="openModalImg(this)">
+                            <img src="./assets/images/boy.jpeg" alt="boy" onclick="openModalImg(this)">
                         </div>
-                        <h1 class="font-esthetic" style="font-size: 2rem;">Andi Indri, A. Md. Keb</h1>
-                        <p class="mt-3 mb-0" style="font-size: 1.25rem;">Putri Pertama</p>
-                        <p class="mb-0">Bapak Andi Idrus Rasyid &amp; Ibu Andi Erdawati</p>
+                        <h1 class="font-esthetic" style="font-size: 2rem;">Aldi Arif Setiawan, S.Kom</h1>
+                        <p class="mt-3 mb-0" style="font-size: 1.25rem;">Putra Pertama</p>
+                        <p class="mb-0">Bapak Sajidin &amp; Ibu Hayati</p>
                     </div>
+
                 </div>
 
                 <!-- Ballon animation -->
@@ -383,12 +385,12 @@
                     </div>
 
                     <div class="py-2 animated-vertical-item" data-direction="bottom">
-                        <a href="https://maps.app.goo.gl/zRkN7r21QAbLtXx88" target="_blank"
+                        <a href="https://maps.app.goo.gl/9im5Bv163ZThWFVM8" target="_blank"
                             class="btn custom-button btn-sm rounded-pill shadow-sm mb-2 px-3">
                             <i class="fa-solid fa-map-location-dot me-2 "></i> Lihat Google Maps
                         </a>
                         <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem;">
-                            RT 02 RW 01, Desa Abbanuange, Kec. Lilirilau, Kab. Soppeng, Sulawesi Selatan
+                            RT 02 RW 01, Desa Kebo, Kec. Lilirilau, Kab. Soppeng, Sulawesi Selatan
                         </p>
                     </div>
                 </div>
@@ -493,23 +495,23 @@
 
                                 <div class="col-5 card-body shadow p-3 m-3 animated-vertical-item" data-direction="top"
                                     data-duration="1.2s">
-                                    <img src="./assets/images/bank-permata.png" class="img-fluid w-50 rounded"
-                                        alt="bni">
-                                    <p class="card-text mt-3 mb-0" style="font-size: 0.9rem;">No. Rekening 977397820
+                                    <img src="./assets/images/bank_bri.png" class="img-fluid w-50 rounded" alt="bni">
+                                    <p class="card-text mt-3 mb-0" style="font-size: 0.9rem;">No. Rekening
+                                        363201031604536
                                     </p>
-                                    <p class="card-text" style="font-size: 0.9rem;">a.n Aldi Arif Setiawan</p>
+                                    <p class="card-text" style="font-size: 0.9rem;">a.n Andi Indri</p>
                                     <button class="btn btn-outline-dark btn-sm rounded-3 copyButton"
-                                        data-copy="977397820">Salin No. Rekening</button>
+                                        data-copy="363201031604536">Salin No. Rekening</button>
                                 </div>
 
                                 <div class="col-5 card-body shadow p-3 m-3 animated-vertical-item" data-direction="top"
                                     data-duration="1.2s">
-                                    <img src="./assets/images/bank-bsi.png" class="img-fluid w-50 rounded" alt="bri">
-                                    <p class="card-text mt-3 mb-0" style="font-size: 0.9rem;">No. Rekening 7262375522
+                                    <img src="./assets/images/bank_bni.png" class="img-fluid w-50 rounded" alt="bri">
+                                    <p class="card-text mt-3 mb-0" style="font-size: 0.9rem;">No. Rekening 1856472767
                                     </p>
-                                    <p class="card-text" style="font-size: 0.9rem;">a.n Aldi Arif Setiawan</p>
+                                    <p class="card-text" style="font-size: 0.9rem;">a.n Andi Indri</p>
                                     <button class="btn btn-outline-dark btn-sm rounded-3 copyButton"
-                                        data-copy="7262375522">Salin No. Rekening</button>
+                                        data-copy="1856472767">Salin No. Rekening</button>
                                 </div>
                             </div>
                         </div>
