change music and color

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 
         <!-- Audio Element -->
-        <audio id="buttonSound" src="./assets/sound/sound3.mp3" preload="auto"></audio>
+        <audio id="buttonSound" src="./assets/sound/sound4.mp3" preload="auto"></audio>
 
         <!-- Audio Button -->
         <button type="button" id="playPauseButton" class="btn border border-2 btn-sm rounded-circle btn-music">
@@ -139,7 +139,7 @@
                     Agustus 2024</p>
 
                 <div class="animated-vertical-item" data-direction="bottom">
-                    <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=The%20Wedding%20of%20Aldi%20and%20Andi%20Indri&details=The%20Wedding%20of%20Aldi%20and%20Andi%20Indri%7C%2004%20Agustus%202024%20%7C%20RT%2002%20RW%2001,%20Desa%20Kebo,%20Kec.%20Lilirilau,%20Kab.%20Soppeng,%20Sulawesi%20Selatan%20%7C%2010.00%20WITA%20-%20Selesai%20&dates=20240804T100000/20240804T110000&location=https://maps.app.goo.gl/9im5Bv163ZThWFVM8"
+                    <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=The%20Wedding%20of%20Aldi%20and%20Andi%20Indri&details=The%20Wedding%20of%20Aldi%20and%20Andi%20Indri%7C%2004%20Agustus%202024%20%7C%20Sekkungenge,%20Desa%20Kebo,%20Kec.%20Lilirilau,%20Kab.%20Soppeng,%20Sulawesi%20Selatan%20%7C%2010.00%20WITA%20-%20Selesai%20&dates=20240804T100000/20240804T110000&location=https://maps.app.goo.gl/9im5Bv163ZThWFVM8"
                         target="_blank" class="btn custom-button btn-sm rounded-pill shadow-sm px-3">
                         <i class="fa-solid fa-calendar-check me-2"></i> Save The Date
                     </a>
@@ -173,7 +173,7 @@
                 <div class="position-relative svg-animated">
                     <div class="position-absolute" style="top: 0%; right: 10%;">
                         <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="currentColor"
-                            class="opacity-50 animate-love love" viewBox="0 0 16 16">
+                            class="animate-love love" viewBox="0 0 16 16">
                             <path
                                 d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
                         </svg>
@@ -193,7 +193,7 @@
                 <div class="position-relative svg-animated">
                     <div class="position-absolute" style="top: 0%; left: 10%;">
                         <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="currentColor"
-                            class="opacity-50 animate-love" viewBox="0 0 16 16">
+                            class="animate-love" viewBox="0 0 16 16">
                             <path
                                 d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
                         </svg>
@@ -216,7 +216,7 @@
                     <div class="position-relative svg-animated">
                         <div class="position-absolute" style="top: 0%; right: 10%;">
                             <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="currentColor"
-                                class="opacity-50 animate-love" viewBox="0 0 16 16">
+                                class="animate-love" viewBox="0 0 16 16">
                                 <path
                                     d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
                             </svg>
@@ -229,7 +229,7 @@
                     <div class="position-relative svg-animated">
                         <div class="position-absolute" style="top: 0%; left: 10%;">
                             <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="currentColor"
-                                class="opacity-50 animate-love" viewBox="0 0 16 16">
+                                class="animate-love" viewBox="0 0 16 16">
                                 <path
                                     d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
                             </svg>
@@ -251,7 +251,7 @@
                 <div class="position-relative svg-animated">
                     <div class="position-absolute" style="top: 0%; right: 5%;">
                         <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="currentColor"
-                            class="opacity-50 animate-love" viewBox="0 0 16 16">
+                            class="animate-love" viewBox="0 0 16 16">
                             <path fill-rule="evenodd"
                                 d="m8 2.42-.717-.737c-1.13-1.161-3.243-.777-4.01.72-.35.685-.451 1.707.236 3.062C4.16 6.753 5.52 8.32 8 10.042c2.479-1.723 3.839-3.29 4.491-4.577.687-1.355.587-2.377.236-3.061-.767-1.498-2.88-1.882-4.01-.721zm-.49 8.5c-10.78-7.44-3-13.155.359-10.063q.068.062.132.129.065-.067.132-.129c3.36-3.092 11.137 2.624.357 10.063l.235.468a.25.25 0 1 1-.448.224l-.008-.017c.008.11.02.202.037.29.054.27.161.488.419 1.003.288.578.235 1.15.076 1.629-.157.469-.422.867-.588 1.115l-.004.007a.25.25 0 1 1-.416-.278c.168-.252.4-.6.533-1.003.133-.396.163-.824-.049-1.246l-.013-.028c-.24-.48-.38-.758-.448-1.102a3 3 0 0 1-.052-.45l-.04.08a.25.25 0 1 1-.447-.224l.235-.468ZM6.013 2.06c-.649-.18-1.483.083-1.85.798-.131.258-.245.689-.08 1.335.063.244.414.198.487-.043.21-.697.627-1.447 1.359-1.692.217-.073.304-.337.084-.398">
                             </path>
@@ -292,8 +292,8 @@
         <!-- Ballon animation -->
         <div class="position-relative svg-animated">
             <div class="position-absolute" style="top: 0%; right: 5%;">
-                <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="currentColor"
-                    class="opacity-50 animate-love" viewBox="0 0 16 16">
+                <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="animate-love"
+                    viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
                         d="m8 2.42-.717-.737c-1.13-1.161-3.243-.777-4.01.72-.35.685-.451 1.707.236 3.062C4.16 6.753 5.52 8.32 8 10.042c2.479-1.723 3.839-3.29 4.491-4.577.687-1.355.587-2.377.236-3.061-.767-1.498-2.88-1.882-4.01-.721zm-.49 8.5c-10.78-7.44-3-13.155.359-10.063q.068.062.132.129.065-.067.132-.129c3.36-3.092 11.137 2.624.357 10.063l.235.468a.25.25 0 1 1-.448.224l-.008-.017c.008.11.02.202.037.29.054.27.161.488.419 1.003.288.578.235 1.15.076 1.629-.157.469-.422.867-.588 1.115l-.004.007a.25.25 0 1 1-.416-.278c.168-.252.4-.6.533-1.003.133-.396.163-.824-.049-1.246l-.013-.028c-.24-.48-.38-.758-.448-1.102a3 3 0 0 1-.052-.45l-.04.08a.25.25 0 1 1-.447-.224l.235-.468ZM6.013 2.06c-.649-.18-1.483.083-1.85.798-.131.258-.245.689-.08 1.335.063.244.414.198.487-.043.21-.697.627-1.447 1.359-1.692.217-.073.304-.337.084-.398">
                     </path>
@@ -303,8 +303,8 @@
 
         <div class="position-relative svg-animated">
             <div class="position-absolute" style="top: 0%; right: 5%;">
-                <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="currentColor"
-                    class="opacity-50 animate-love" viewBox="0 0 16 16">
+                <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="animate-love"
+                    viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
                         d="m8 2.42-.717-.737c-1.13-1.161-3.243-.777-4.01.72-.35.685-.451 1.707.236 3.062C4.16 6.753 5.52 8.32 8 10.042c2.479-1.723 3.839-3.29 4.491-4.577.687-1.355.587-2.377.236-3.061-.767-1.498-2.88-1.882-4.01-.721zm-.49 8.5c-10.78-7.44-3-13.155.359-10.063q.068.062.132.129.065-.067.132-.129c3.36-3.092 11.137 2.624.357 10.063l.235.468a.25.25 0 1 1-.448.224l-.008-.017c.008.11.02.202.037.29.054.27.161.488.419 1.003.288.578.235 1.15.076 1.629-.157.469-.422.867-.588 1.115l-.004.007a.25.25 0 1 1-.416-.278c.168-.252.4-.6.533-1.003.133-.396.163-.824-.049-1.246l-.013-.028c-.24-.48-.38-.758-.448-1.102a3 3 0 0 1-.052-.45l-.04.08a.25.25 0 1 1-.447-.224l.235-.468ZM6.013 2.06c-.649-.18-1.483.083-1.85.798-.131.258-.245.689-.08 1.335.063.244.414.198.487-.043.21-.697.627-1.447 1.359-1.692.217-.073.304-.337.084-.398">
                     </path>
@@ -374,7 +374,7 @@
                             <p>Pukul 10.00 WITA - Selesai</p>
                             <p class="mb-0" style="font-size: 0.8rem;">(Kediaman mempelai wanita)</p>
                             <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem;">
-                                RT 02 RW 02, Desa Kebo, Kec. Lilirilau, Kab. Soppeng, Sulawesi Selatan
+                                Lompulle, Sekkungnge Desa Kebo, Kec. Lilirilau, Kab. Soppeng, Sulawesi Selatan
                             </p>
                         </div>
 
@@ -390,7 +390,7 @@
                             <i class="fa-solid fa-map-location-dot me-2 "></i> Lihat Google Maps
                         </a>
                         <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem;">
-                            RT 02 RW 01, Desa Kebo, Kec. Lilirilau, Kab. Soppeng, Sulawesi Selatan
+                            Lompulle, Sekkungnge Desa Kebo, Kec. Lilirilau, Kab. Soppeng, Sulawesi Selatan
                         </p>
                     </div>
                 </div>
@@ -407,7 +407,7 @@
             <div class="position-relative svg-animated">
                 <div class="position-absolute" style="top: 0%; left: 8%;">
                     <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="currentColor"
-                        class="opacity-50  animate-love" viewBox="0 0 16 16">
+                        class="animate-love" viewBox="0 0 16 16">
                         <path
                             d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
                     </svg>
@@ -417,7 +417,7 @@
             <div class="position-relative svg-animated">
                 <div class="position-absolute" style="top: 0%; right: 5%;">
                     <svg xmlns="https://www.w3.org/2000/svg" width="48" height="48" fill="currentColor"
-                        class="opacity-50 animate-love" viewBox="0 0 16 16">
+                        class="animate-love" viewBox="0 0 16 16">
                         <path fill-rule="evenodd"
                             d="m8 2.42-.717-.737c-1.13-1.161-3.243-.777-4.01.72-.35.685-.451 1.707.236 3.062C4.16 6.753 5.52 8.32 8 10.042c2.479-1.723 3.839-3.29 4.491-4.577.687-1.355.587-2.377.236-3.061-.767-1.498-2.88-1.882-4.01-.721zm-.49 8.5c-10.78-7.44-3-13.155.359-10.063q.068.062.132.129.065-.067.132-.129c3.36-3.092 11.137 2.624.357 10.063l.235.468a.25.25 0 1 1-.448.224l-.008-.017c.008.11.02.202.037.29.054.27.161.488.419 1.003.288.578.235 1.15.076 1.629-.157.469-.422.867-.588 1.115l-.004.007a.25.25 0 1 1-.416-.278c.168-.252.4-.6.533-1.003.133-.396.163-.824-.049-1.246l-.013-.028c-.24-.48-.38-.758-.448-1.102a3 3 0 0 1-.052-.45l-.04.08a.25.25 0 1 1-.447-.224l.235-.468ZM6.013 2.06c-.649-.18-1.483.083-1.85.798-.131.258-.245.689-.08 1.335.063.244.414.198.487-.043.21-.697.627-1.447 1.359-1.692.217-.073.304-.337.084-.398">
                         </path>
@@ -463,7 +463,7 @@
                             <img src="./assets/images/casual3.jpeg" class="img-fluid" alt="Image 6"
                                 onclick="openModalImg(this)">
                         </div>
-                    </div>cs
+                    </div>
                 </div>
 
             </div>
@@ -551,9 +551,9 @@
 
                     <div id="error-message" class="error" style="display: none; color:red"></div>
 
-                    <div class="d-grid">
-                        <button class="btn btn-primary btn-sm rounded-3 shadow m-1" onclick="postComment()">
-                            <i class="fa-solid fa-paper-plane me-1"></i>Send
+                    <div class="">
+                        <button class="btn custom-button btn-sm rounded-pill shadow-sm m-1" onclick="postComment()">
+                            <i class="fa-solid fa-paper-plane me-1"></i> Send
                         </button>
                     </div>
                 </div>
