--- a/index.html
+++ b/index.html
@@ -359,6 +359,9 @@
                         acara :
                     </p>
 
+                    <p class="mb-0 animated-horizontal-item mb-4" data-direction="right" style="font-size: 1.5rem;">
+                        Minggu, 04 Agustus 2024</p>
+
                     <!-- Love animation -->
                     <div class=" position-relative animate-love">
                         <div class="position-absolute" style="top: 0%; right: 10%;">
